updated some i3 scripts

--- a/packages/desktop/i3/config/i3.config
+++ b/packages/desktop/i3/config/i3.config
@@ -11,6 +11,11 @@ set $urgent-bg-color 	 #E53935
 floating_modifier $mod
 
 ############################################################
+#						Variables					   	   #
+############################################################
+client.focused #4c1599 $bg-color $text-color #2e9ef4 #4c1599
+
+############################################################
 #						Font                               #
 ############################################################
 # sets general i3 font
@@ -32,10 +37,10 @@ bindsym $mod+g exec eidolon menu
 # rofi file selector
 #bindsym Mod1+w exec rofi -show wallpaper -modi wallpaper:~/dotfiles/packages/desktop/i3/scripts/wallpaper.sh
 bindsym $mod+w exec urxvt -geometry 100x35 -e ranger $HOME/Pictures/Wallpapers
-# firefox shortcut
-bindsym $mod+i exec firefox
-#firefox private browsing
-bindsym $mod+p exec firefox -private-window
+# browser shortcut
+bindsym $mod+i exec qutebrowser
+#firefox proxmox home
+bindsym $mod+p exec ~/dotfiles/packages/desktop/i3/scripts/proxmox_firefox.sh
 # Start Rofi ssh
 bindsym $mod+s exec rofi -show ssh -font "System San Francisco Display 14"
 # Thunar shortcut
@@ -43,11 +48,15 @@ bindsym $mod+u exec urxvt -geometry 80x40 -e ranger $HOME/Documents
 # Calcurse
 bindsym $mod+c exec urxvt -geometry 100x50 -e calcurse
 # Floating terminal
-bindsym $mod+t exec urxvt
+bindsym $mod+t exec urxvt -geometry 100x35
 # Neomutt
-bindsym $mod+m exec urxvt -e neomutt
+#bindsym $mod+m exec urxvt -e neomutt
+# Spotify scratchpad
+bindsym $mod+m [class="Spotify"] scratchpad show
 #lock screen
-bindsym control+Mod1+l exec lock -a t e c 000000
+bindsym control+Mod1+l exec lock
+#rofi monitor select
+bindsym $mod+b exec ~/dotfiles/packages/desktop/i3/scripts/monitor_layout.sh
 
 # Toggle between internal and external monitor configs
 bindsym $mod+Shift+m exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/1_monitor.sh
@@ -81,10 +90,8 @@ bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
-# split in horizontal orientation
-bindsym $mod+Mod1+h split h
-# split in vertical orientation
-bindsym $mod+Mod1+v split v
+# toggle split
+bindsym $mod+z split toggle
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -144,27 +151,14 @@ bindsym $mod+Control+e exec "i3-nagbar -t warning -m 'You pressed the exit short
 # Focus does not follow mouse
 focus_follows_mouse no
 
-# resize window (you can also use the mouse for that)
-mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
+# resizing windows - stolen from Lukesmithxyz
+bindsym $mod+Control+h exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/i3resize left
+bindsym $mod+Control+j exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/i3resize down
+bindsym $mod+Control+k exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/i3resize up
+bindsym $mod+Control+l exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/i3resize right
 
-        bindsym h resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
-        bindsym l resize grow width 10 px or 10 ppt
-
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-
-        # back to normal: Enter or Escape
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-}
-
-bindsym $mod+r mode "resize"
+bindsym $mod+Shift+minus move scratchpad
+bindsym $mod+minus scratchpad show
 
 ############################################################
 #						Function Keys                      #
@@ -193,13 +187,12 @@ bindsym XF86AudioPrev exec playerctl previous
 exec spotify
 exec franz
 exec signal-desktop
-#exec thunderbird
 exec urxvt -e neomutt
 exec compton
 exec udiskie
 exec caffeine
 exec blueman-applet
-exec xautolock -time 10 -locker 'lock -a t e c 000000'
+#exec xautolock -time 10 -locker 'lock'
 exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 #Set wallpaper
@@ -208,16 +201,18 @@ exec_always ~/dotfiles/packages/desktop/i3/scripts/set_last_wp.sh
 ###########################################################
 #						Misc                               #
 ############################################################
-# Set programs to always open in certain workspaces
-for_window [class="Spotify"] move to workspace 8
-assign [class="Franz"] 9
-assign [class="Signal"] 9
-#assign [class="Termite"] 10
+# Floating and whatnot
 for_window [class="URxvt"] floating enable
-for_window [title="neomutt" class="URxvt"] floating disable move to workspace 10
 for_window [class="Galculator"] floating enable
 for_window [class="Gnome-pomodoro"] floating enable
 for_window [class="Arandr"] floating enable
 for_window [class="retroarch"] floating enable
 for_window [class="Pavucontrol"] floating enable
 for_window [class="Blueman-manager"] floating enable
+for_window [class="mpv"] floating enable
+
+# Set programs to always open in certain workspaces
+for_window [class="Spotify"] move to scratchpad
+assign [class="Franz"] 9
+assign [class="Signal"] 9
+for_window [title="neomutt" class="URxvt"] floating disable move to workspace 10
