--- a/packages/desktop/i3/config/polybar.config
+++ b/packages/desktop/i3/config/polybar.config
@@ -16,12 +16,12 @@ spacing = 0
 padding-right = 2
 module-margin = 1
 
-font-0 = NotoSans-Regular:size=8;-1
+font-0 = NotoSans-Regular:size=8;0
 font-1 = Font Awesome 5 Free:style=Regular:pixelsize=8;0
 font-2 = Font Awesome 5 Free:style=Solid:pixelsize=8;0
 
 #modules-left = isrunning-openvpn
-modules-center = xwindow
+#modules-center = xwindow
 modules-right = backlight volume wireless-network wired-network battery date
 
 tray-position = left
@@ -109,29 +109,39 @@ label-mode-padding = 2
 label-mode-foreground = #f00
 label-mode-background = #ffb52a
 
-ws-icon-0 = 8;
-ws-icon-1 = 9;
-ws-icon-2 = 10;
+ws-icon-1 = 1;1
+ws-icon-2 = 2;2
+ws-icon-3 = 3;3
+ws-icon-4 = 4;4
+ws-icon-5 = 5;5
+ws-icon-6 = 6;6
+ws-icon-7 = 7;7
+ws-icon-8 = 8;8
+;ws-icon-9 = 9;9
+;ws-icon-0 = 10;10
+;ws-icon-8 = 8;
+ws-icon-9 = 9;
+ws-icon-0 = 10;
 ws-icon-default = 
 
 ; focused = Active workspace on focused monitor
-label-focused = %index%   %icon%
+label-focused = %icon%
 label-focused-background = $#773f3f3f
 label-focused-underline = #4a1599
 label-focused-padding =4
 
 ; unfocused = Inactive workspace on any monitor
-label-unfocused = %index%   %icon%
+label-unfocused = %icon%
 label-unfocused-padding = 4
 
 ; visible = Active workspace on unfocused monitor
-label-visible = %index%   %icon%
+label-visible = %icon%
 label-visible-background = ${self.label-focused-background}
 label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
-label-urgent = %index%   %icon%
+label-urgent = %icon%
 label-urgent-background = #bd2c40
 label-urgent-padding = 4
 
@@ -223,10 +233,10 @@ animation-packetloss-framerate = 500
 
 [module/wired-network]
 type = internal/network
-interface = usb0
+interface = enp62s0u1u1
 interval = 3.0
 
-label-connected =    %{T3}%local_ip%%{T-}
+label-connected =  %{T3}%local_ip%%{T-}
 label-disconnected-foreground = #66
 
 [module/volume]
