--- a/packages/cli/tmux/config/.tmux.conf
+++ b/packages/cli/tmux/config/.tmux.conf
@@ -3,7 +3,7 @@
 ############################################################################
 set-option -g status-bg colour234
 set-option -g status-fg colour137
-set-option -g pane-active-border-fg colour234
+set-option -g pane-active-border-style "fg=colour234"
 
 ############################################################################
 # Term
@@ -38,8 +38,8 @@ set -sg escape-time 0
 ############################################################################
 # Window Mode
 ############################################################################
-setw -g mode-bg colour6
-setw -g mode-fg colour0
+setw -g mode-style "bg=colour6, fg=colour0"
+#setw -g mode-fg colour0
 ############################################################################
 # Window Status
 ############################################################################
@@ -47,41 +47,41 @@ set-window-option -g window-status-format ' #F#I:#W#F '
 set-window-option -g window-status-current-format ' #F#I:#W#F '
 setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
 setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
-setw -g window-status-current-bg colour0
-setw -g window-status-current-fg colour11
-setw -g window-status-current-attr dim
-setw -g window-status-bg green
-setw -g window-status-fg black
-setw -g window-status-attr reverse
+setw -g window-status-current-style "bg=colour0, fg=colour11, dim"
+#setw -g window-status-current-fg colour11
+#setw -g window-status-current-attr dim
+#setw -g window-status-style "bg=green, fg=black, reverse"
+#setw -g window-status-fg black
+#setw -g window-status-attr reverse
 set -g status-left ''
 ############################################################################
 # Status Line
 ############################################################################
 set -g status-justify left
-set -g status-bg default
-set -g status-fg colour12
+#set -g status-bg default
+#set -g status-fg colour12
 set -g status-interval 2
-set -g status-attr dim
+set -g status-style "fg=colour12, bg=default, dim"
 set -g status-left ''
 #set -g status-right '#S'
 set -g status-right "#(whoami)#[default]@#H | #S"
 set -g status-right-length 50
 set -g status-left-length 20
 
-setw -g window-status-current-fg colour81
-setw -g window-status-current-bg colour238
-setw -g window-status-current-attr bold
+setw -g window-status-current-style "fg=colour81, bg=colour238, bold"
+#setw -g window-status-current-bg colour238
+#setw -g window-status-current-attr bold
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 
-setw -g window-status-fg colour138
-setw -g window-status-bg colour235
-setw -g window-status-attr none
+setw -g window-status-style "fg=colour138, bg=colour235, none"
+#setw -g window-status-bg colour235
+#setw -g window-status-attr none
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
-#set -g status-left-length 20
+setw -g window-status-bell-style "fg=colour255, bg=colour1, bold"
+#setw -g window-status-bell-fg colour255
+#setw -g window-status-bell-bg colour1
+set -g status-left-length 20
 
 ############################################################################
 # Restore automatically
