updated aliases in .rc and updated some stuff in i3

--- a/packages/desktop/i3/config/i3.config
+++ b/packages/desktop/i3/config/i3.config
@@ -69,7 +69,7 @@ bindsym $mod+Print exec flameshot gui
 #						Gaps                               #
 ############################################################
 #Remove Winodw Titlebars and set size of border(needed for gaps)
-for_window [class="^.*"] border pixel 2
+for_window [class="^.*"] border pixel 0
 smart_borders on
 smart_gaps on
 gaps inner 20
@@ -89,6 +89,9 @@ bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
+
+# check focus with flashfocus
+bindsym $mod+n exec --no-startup-id flash_window
 
 # toggle split
 bindsym $mod+z split toggle
@@ -197,6 +200,10 @@ exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 #Set wallpaper
 exec_always ~/dotfiles/packages/desktop/i3/scripts/set_last_wp.sh
+
+#flashfocus
+#https://github.com/fennerm/flashfocus
+exec_always --no-startup-id flashfocus
 
 ###########################################################
 #						Misc                               #
