--- a/packages/shell/common/.rc
+++ b/packages/shell/common/.rc
@@ -49,3 +49,6 @@ alias party='curl parrot.live'
 alias zork='frotz ~/zork/ZORKI'
 alias diff='nvim -d'
 alias scim='sc-im'
+alias dots='cd ~/dotfiles/packages/cli'
+#alias vivado='source /tools/Xilinx/Vivado/2018.3/settings64.sh && /tools/Xilinx/Vivado/2018.3/bin/vivado&'
+#alias xsdk='source /tools/Xilinx/SDK/2018.3/settings64.sh && /tools/Xilinx/SDK/2018.3/bin/xsdk&'
