Updated i3 configs and included nord script support

--- a/packages/desktop/i3/config/i3.config
+++ b/packages/desktop/i3/config/i3.config
@@ -40,7 +40,7 @@ bindsym $mod+w exec urxvt -geometry 100x35 -e ranger $HOME/Pictures/Wallpapers
 # browser shortcut
 bindsym $mod+i exec qutebrowser
 #firefox proxmox home
-bindsym $mod+p exec ~/dotfiles/packages/desktop/i3/scripts/proxmox_firefox.sh
+bindsym $mod+Control+p exec ~/dotfiles/packages/desktop/i3/scripts/proxmox_firefox.sh
 # Start Rofi ssh
 bindsym $mod+s exec rofi -show ssh -font "System San Francisco Display 14"
 # Thunar shortcut
@@ -54,9 +54,9 @@ bindsym $mod+t exec urxvt -geometry 100x35
 # Spotify scratchpad
 bindsym $mod+m [class="Spotify"] scratchpad show
 #lock screen
-bindsym control+Mod1+l exec lock
+bindsym Control+Mod1+l exec lock
 #rofi monitor select
-bindsym $mod+b exec ~/dotfiles/packages/desktop/i3/scripts/monitor_layout.sh
+bindsym $mod+F8 exec ~/dotfiles/packages/desktop/i3/scripts/monitor_layout.sh
 
 # Toggle between internal and external monitor configs
 bindsym $mod+Shift+m exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/1_monitor.sh
@@ -71,9 +71,9 @@ bindsym $mod+Print exec flameshot gui
 #Remove Winodw Titlebars and set size of border(needed for gaps)
 for_window [class="^.*"] border pixel 0
 smart_borders on
-smart_gaps on
+#smart_gaps on
 gaps inner 20
-gaps outer 5
+gaps outer 10
 
 ############################################################
 #						General i3 Bindings                #
@@ -217,9 +217,11 @@ for_window [class="retroarch"] floating enable
 for_window [class="Pavucontrol"] floating enable
 for_window [class="Blueman-manager"] floating enable
 for_window [class="mpv"] floating enable
+for_window [class="Chromium"] floating enable
 
 # Set programs to always open in certain workspaces
 for_window [class="Spotify"] move to scratchpad
+for_window [class="plexmediaplayer"] move to scratchpad
 assign [class="Franz"] 9
 assign [class="Signal"] 9
 for_window [title="neomutt" class="URxvt"] floating disable move to workspace 10
