--- a/packages/desktop/i3/config/polybar.config
+++ b/packages/desktop/i3/config/polybar.config
@@ -20,8 +20,7 @@ font-0 = NotoSans-Regular:size=8;0
 font-1 = Font Awesome 5 Free:style=Regular:pixelsize=8;0
 font-2 = Font Awesome 5 Free:style=Solid:pixelsize=8;0
 
-#modules-left = isrunning-openvpn
-#modules-center = xwindow
+modules-center = isrunning-nordvpn
 modules-right = backlight volume wireless-network wired-network battery date
 
 tray-position = left
@@ -269,8 +268,8 @@ label = %title:0:60%
 #content = %{F-} 
 #click-left = bartermapp calcurse 0
 
-[module/isrunning-openvpn]
+[module/isrunning-nordvpn]
 type = custom/script
-exec = ~/dotfiles/packages/desktop/i3/scripts/isrunning-openvpn.sh
+exec = ~/dotfiles/packages/desktop/i3/scripts/nord_connection.py
 interval = 5
 
