I don't really use these anymore, so here's the most recent stuff

--- a/packages/cli/ranger/config/ranger/rc.conf
+++ b/packages/cli/ranger/config/ranger/rc.conf
@@ -94,6 +94,8 @@ set preview_images true
 #   whole terminal window.
 set preview_images_method w3m
 
+set w3m_delay 0.2
+
 # Default iTerm2 font size (see: preview_images_method: iterm2)
 set iterm2_font_width 8
 set iterm2_font_height 11
@@ -656,7 +658,8 @@ tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 
 # Setting images as wallpaper and lock screen
-map bw shell feh --bg-scale %f && cp %f ~/.local/share/ranger/wallpaper/wall.png
+#map bw shell feh --bg-scale %f && cp %f ~/.local/share/ranger/wallpaper/wall.png
+map bw shell wal -i %f && cp %f ~/.local/share/ranger/wallpaper/wall.png
 map bl shell cp %f ~/Pictures/lockscreen/lock_screen.png
 
 # Filter as you type
@@ -665,6 +668,6 @@ map f console scout -ftsea%space
 # Extract zip files
 map e shell ~/.config/ranger/extract.sh %f
 #ext zip, has unzip = for file in "$@"; do unzip -d "${file%.*}" "$file"; done
-
-#map Gv cd /etc/openvpn/ovpn_tcp
-#map vpn sudo openvpn %f
+# a plugin that adds file glyphs / icon support to Ranger:
+# https://github.com/alexanderjeurissen/ranger_devicons
+default_linemode devicons
