--- a/packages/desktop/i3/config/i3.config
+++ b/packages/desktop/i3/config/i3.config
@@ -25,32 +25,29 @@ font pango:DejaVu Sans Mono 10
 #						Bindings                           #
 ############################################################
 # start a terminal
-bindsym $mod+Return exec xfce4-terminal
-bindsym Mod1+g exec cool-retro-term
+bindsym $mod+Return exec st
 # kill focused window
 bindsym $mod+Shift+q kill
 # start rofi (a program launcher)
-#bindsym Mod1+F3 exec rofi -show run -font "System San Francisco Display 14"
-bindsym $mod+d exec rofi -show run -font "System San Francisco Display 14"
+bindsym $mod+d exec rofi -show run
+bindsym $mod+F3 exec rofi -show run
 # start eidolon (rofi but for steam games)
 bindsym $mod+g exec eidolon menu
-# rofi file selector
-#bindsym Mod1+w exec rofi -show wallpaper -modi wallpaper:~/dotfiles/packages/desktop/i3/scripts/wallpaper.sh
+# wallpaper file selector
 bindsym $mod+w exec urxvt -geometry 100x35 -e ranger $HOME/Pictures/Wallpapers
 # browser shortcut
 bindsym $mod+i exec qutebrowser
-#firefox proxmox home
-bindsym $mod+Control+p exec ~/dotfiles/packages/desktop/i3/scripts/proxmox_firefox.sh
 # Start Rofi ssh
-bindsym $mod+s exec rofi -show ssh -font "System San Francisco Display 14"
+bindsym $mod+s exec rofi -show ssh
+bindsym $mod+F2 exec rofi -show ssh
+# Rofi theme switcher
+bindsym $mod+F7 exec $HOME/dotfiles/packages/desktop/i3/scripts/pywal_theme_change.py
 # Thunar shortcut
 bindsym $mod+u exec urxvt -geometry 80x40 -e ranger $HOME/Documents
 # Calcurse
 bindsym $mod+c exec urxvt -geometry 100x50 -e calcurse
 # Floating terminal
 bindsym $mod+t exec urxvt -geometry 100x35
-# Neomutt
-#bindsym $mod+m exec urxvt -e neomutt
 # Spotify scratchpad
 bindsym $mod+m [class="Spotify"] scratchpad show
 #lock screen
@@ -60,8 +57,6 @@ bindsym $mod+F8 exec ~/dotfiles/packages/desktop/i3/scripts/monitor_layout.sh
 
 # Toggle between internal and external monitor configs
 bindsym $mod+Shift+m exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/1_monitor.sh
-bindsym $mod+Shift+n exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/hdmi_1.sh
-bindsym $mod+Shift+b exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/hdmi_2.sh
 
 # screenshots using flameshot
 bindsym $mod+Print exec flameshot gui
@@ -72,8 +67,8 @@ bindsym $mod+Print exec flameshot gui
 for_window [class="^.*"] border pixel 0
 smart_borders on
 #smart_gaps on
-gaps inner 20
-gaps outer 10
+gaps inner 25
+gaps outer 15
 
 ############################################################
 #						General i3 Bindings                #
@@ -167,16 +162,13 @@ bindsym $mod+minus scratchpad show
 #						Function Keys                      #
 ############################################################
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec $HOME/dotfiles/packages/desktop/i3/scripts/volumeControl.sh up
+bindsym XF86AudioLowerVolume exec $HOME/dotfiles/packages/desktop/i3/scripts/volumeControl.sh down
+bindsym XF86AudioMute exec $HOME/dotfiles/packages/desktop/i3/scripts/volumeControl.sh mute
 
-# Sreen brightness controls
-bindsym XF86MonBrightnessUp exec light -A 5 # increase screen brightness
-bindsym XF86MonBrightnessDown exec light -U 5 # decrease screen brightness
-
-# Touchpad controls
-#bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
+# Screen brightness controls
+bindsym XF86MonBrightnessUp exec $HOME/dotfiles/packages/desktop/i3/scripts/brightnessControl.sh up # increase screen brightness
+bindsym XF86MonBrightnessDown exec $HOME/dotfiles/packages/desktop/i3/scripts/brightnessControl.sh down # decrease screen brightness
 
 # Media player controls
 bindsym XF86AudioPlay exec playerctl play-pause
@@ -187,15 +179,14 @@ bindsym XF86AudioPrev exec playerctl previous
 #						Autostart                          #
 ############################################################
 #Autostart programs
+exec wal -R
 exec spotify
 exec franz
 exec signal-desktop
-exec urxvt -e neomutt
 exec compton
 exec udiskie
 exec caffeine
 exec blueman-applet
-#exec xautolock -time 10 -locker 'lock'
 exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 #Set wallpaper
@@ -205,13 +196,14 @@ exec_always ~/dotfiles/packages/desktop/i3/scripts/set_last_wp.sh
 #https://github.com/fennerm/flashfocus
 exec_always --no-startup-id flashfocus
 
+xrdb ~/.Xdefaults
+exec ~/.local/bin/neomutt_run
 ###########################################################
 #						Misc                               #
 ############################################################
 # Floating and whatnot
 for_window [class="URxvt"] floating enable
 for_window [class="Galculator"] floating enable
-for_window [class="Gnome-pomodoro"] floating enable
 for_window [class="Arandr"] floating enable
 for_window [class="retroarch"] floating enable
 for_window [class="Pavucontrol"] floating enable
@@ -221,7 +213,6 @@ for_window [class="Chromium"] floating enable
 
 # Set programs to always open in certain workspaces
 for_window [class="Spotify"] move to scratchpad
-for_window [class="plexmediaplayer"] move to scratchpad
 assign [class="Franz"] 9
 assign [class="Signal"] 9
-for_window [title="neomutt" class="URxvt"] floating disable move to workspace 10
+for_window [ class="St" title="neomutt"] move to workspace 10
