--- a/packages/desktop/i3/config/polybar.config
+++ b/packages/desktop/i3/config/polybar.config
@@ -1,12 +1,13 @@
 # vim: set syn=dosini:
 
 [bar/top]
-monitor = HDMI-1
-monitor-fallback = eDP-1
+#monitor = HDMI-1
+#monitor-fallback = eDP-1
+monitor = ${env:MONITOR}
 width = 100%
 height = 18
 
-background = #66000000
+background = #aa000000
 foreground = #ccffffff
 
 line-color = ${bar/bottom.background}
@@ -17,16 +18,17 @@ padding-right = 2
 module-margin = 1
 
 font-0 = NotoSans-Regular:size=8;0
-font-1 = Font Awesome 5 Free:style=Regular:pixelsize=8;0
-font-2 = Font Awesome 5 Free:style=Solid:pixelsize=8;0
-
-modules-center = isrunning-nordvpn
-modules-right = backlight volume wireless-network wired-network battery date
+font-1 = FontAwesome:style=Regular:pixelsize=8;0
+font-2 = FantasqueSansMono Nerd Font:pixelsize=9;0
 
 tray-position = left
+modules-center = isrunning-nordvpn
+modules-right = wireless-network wired-network battery date
+
 [bar/bottom]
-monitor = HDMI-1
-monitor-fallback = eDP-1
+#monitor = HDMI-1
+#monitor-fallback = eDP-1
+monitor = ${env:MONITOR}
 bottom = true
 width = 100%
 height = 20
@@ -44,10 +46,9 @@ module-margin-left = 0
 module-margin-right = 6
 
 font-0 = NotoSans-Regular:size=6;0
-font-1 = Font Awesome 5 Free:style=Regular:pixelsize=8;0
-font-2 = Font Awesome 5 Free:style=Solid:pixelsize=8;0
+font-1 = FontAwesome:style=Regular:pixelsize=7;0
+font-2 = FantasqueSansMono Nerd Font:pixelsize=7;0
 font-3 = NotoSans-Regular:size=6;-1
-font-4 = System San Francisco Display:size=6,-10
 
 modules-left = i3
 modules-right = cpu memory
@@ -64,13 +65,29 @@ format-full-padding = 3
 format-charging-padding = 3
 format-discharging-padding = 3
 
-ramp-capacity-0 = 
+#ramp-capacity-0 = 
+#ramp-capacity-0-foreground = #f53c3c
+#ramp-capacity-1 = 
+#ramp-capacity-1-foreground = #ffa900
+#ramp-capacity-2 = 
+#ramp-capacity-3 = 
+#ramp-capacity-4 = 
+
+ramp-capacity-0 = 
 ramp-capacity-0-foreground = #f53c3c
-ramp-capacity-1 = 
+ramp-capacity-1 = 
 ramp-capacity-1-foreground = #ffa900
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
+ramp-capacity-2 = 
+ramp-capacity-2-foreground = #ffa900
+ramp-capacity-3 = 
+ramp-capacity-3-foreground = #ffa900
+ramp-capacity-4 = 
+ramp-capacity-5 = 
+ramp-capacity-6 = 
+ramp-capacity-7 = 
+ramp-capacity-8 = 
+ramp-capacity-9 = 
+
 
 bar-capacity-width = 10
 bar-capacity-format = %{+u}%{+o}%fill%%empty%%{-u}%{-o}
@@ -82,11 +99,13 @@ bar-capacity-empty-font = 3
 bar-capacity-empty-foreground = #44ffffff
 
 animation-charging-foreground = #0033cc
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-5 = 
+animation-charging-6 = 
 animation-charging-framerate = 750
 
 [module/i3]
@@ -102,7 +121,7 @@ label-visible-font = 9
 label-urgent-font = 9
 
 ; Only show workspaces on the same output as the bar
-;pin-workspaces = true
+pin-workspaces = true
 
 label-mode-padding = 2
 label-mode-foreground = #f00
@@ -119,8 +138,8 @@ ws-icon-8 = 8;8
 ;ws-icon-9 = 9;9
 ;ws-icon-0 = 10;10
 ;ws-icon-8 = 8;
-ws-icon-9 = 9;
-ws-icon-0 = 10;
+ws-icon-9 = 9;
+ws-icon-0 = 10;
 ws-icon-default = 
 
 ; focused = Active workspace on focused monitor
@@ -185,7 +204,7 @@ ramp-coreload-7-foreground = #ff5555
 
 [module/date]
 type = internal/date
-date =   %%{F#99}%m-%d-%Y%%{F-}  %%{F#fff}%H:%M%%{F-}
+date =   %%{F#99}%d %b, %Y%%{F-}  %%{F#fff}%H:%M%%{F-}
 date-alt =   %%{F#fff}%A, %d %B %Y  %%{F#fff}%H:%M%%{F#666}:%%{F#fba922}%S%%{F-}
 #
 [module/memory]
@@ -217,16 +236,14 @@ format-connected = <ramp-signal> <label-connected>
 format-connected-paddingleft = 0
 format-disconnected-padding-left = 0
 label-connected = %essid%
-label-disconnected =   not connected
+label-disconnected = 睊not connected
 label-disconnected-foreground = #66
 
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
+ramp-signal-0 = 直
 
-animation-packetloss-0 = 
+animation-packetloss-0 = 
 animation-packetloss-0-foreground = #ffa64c
-animation-packetloss-1 = 
+animation-packetloss-1 = 
 animation-packetloss-1-foreground = ${bar/top.foreground}
 animation-packetloss-framerate = 500
 
@@ -254,22 +271,7 @@ ramp-volume-0 = 
 ramp-volume-1 = 
 ramp-volume-2 = 
 
-[module/clock]
-type = internal/date
-interval = 2
-date = %%{F#999}%Y-%m-%d%%{F-}  %%{F#fff}%H:%M%%{F-}
-
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:60%
-
-#[module/calcurse]
-#type = custom/text
-#content = %{F-} 
-#click-left = bartermapp calcurse 0
-
 [module/isrunning-nordvpn]
 type = custom/script
 exec = ~/dotfiles/packages/desktop/i3/scripts/nord_connection.py
 interval = 5
-
