--- a/packages/desktop/i3/config/rofi.config
+++ b/packages/desktop/i3/config/rofi.config
@@ -1,20 +1,9 @@
-! ------------------------------------------------------------------------------
-! ROFI Color theme
-! ------------------------------------------------------------------------------
-rofi.color-enabled: true
-rofi.color-window: argb:e8303541, argb:00000000, argb:00000000
-rofi.color-normal: argb:00303541, #f3f4f5, argb:00eee8d5, argb:00586e75, #5294e2
-rofi.color-active: argb:aefdf6e3, #303541, argb:bceee8d5, argb:ae268bd2, #fdf6e3
-rofi.color-urgent: argb:79303541, #dc322f, argb:00eee8d5, argb:00dc322f, argb:00fdf6e3
-
-
-rofi.lines:5
-rofi.width: 60
-rofi.modi: window,run
-rofi.terminal: xfce4-terminal
+rofi.modi: run
+rofi.terminal: st
 rofi.ssh-client: ssh
-rofi.ssh-command: {terminal} -e "{ssh-client} {host}"
+rofi.ssh-command: {terminal} -e {ssh-client} {host}
 rofi.case-sensitive: false
-rofi.eh: 2
-rofi.padding: 150
 rofi.hide-scrollbar: true
+
+#rofi.theme: ~/.config/wal/templates/rofi_pywal.rasi
+rofi.theme: clean_purple
