--- a/packages/shell/zsh/config/run/.env
+++ b/packages/shell/zsh/config/run/.env
@@ -3,7 +3,7 @@
 #
 
 # Local fpath
-export fpath=(${DOTFILES_DIR}/packages/shell/${DOTFILES_SHELL}/config/run/fpath $fpath)
+export fpath=($HOME/.shellrc/fpath $fpath)
 
 # Completion
 
