--- a/packages/cli/tmux/config/.tmux.conf
+++ b/packages/cli/tmux/config/.tmux.conf
@@ -1,9 +1,7 @@
 ############################################################################
-# Colors
+# Panes
 ############################################################################
-set-option -g status-bg colour234
-set-option -g status-fg colour137
-set-option -g pane-active-border-style "fg=colour234"
+set-option -g pane-active-border-style fg='#ffffff' bg='#000000'
 
 ############################################################################
 # Term
@@ -53,7 +51,7 @@ set -g status-left ''
 ############################################################################
 set -g status-justify left
 set -g status-interval 2
-set -g status-style "fg=colour12, bg=default, dim"
+set -g status-style "fg=colour12, bg=default"
 set -g status-left ''
 set -g status-right "#(whoami)#[default]@#H | #S"
 set -g status-right-length 50
@@ -85,22 +83,4 @@ set -g @prefix_highlight_bg 'white'
 unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
-############################################################################
-# Plugins
-############################################################################
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-
 
